<resources>
    <string name="app_name">Airbus Procurement Sourcing Tool</string>
    <string name="field_hint">Type here...</string>

    <string name="start_button_login">Log in</string>
    <string name="start_button_signup">Register</string>

    <string name="login_login_already_used">This login is already used</string>
    <string name="login_login_not_exist">This login does not exist</string>
    <string name="login_login_too_short">The login must be at least 5 characters long</string>
    <string name="login_password_too_short">The password must be at least 5 characters long</string>
    <string name="login_password_different">The two password fields must be the same</string>
    <string name="login_password_incorrect">The password does not match this login</string>
    <string name="login_loginField_title">Airbus User ID</string>
    <string name="login_passwordField_title">Password</string>
    <string name="login_passwordField2_title">Confirm password</string>

    <string name="signup_screen_title_1">Register (1/4)</string>
    <string name="signup_screen_title_2">Register (2/4)</string>
    <string name="signup_screen_title_3">Register (3/4)</string>
    <string name="signup_screen_title_4">Register (4/4)</string>
    <string name="signup_screen_1_welcome">Welcome to the Airbus Procurement Sourcing Tool ! Please register :</string>
    <string name="signup_nameField_title">First Name</string>
    <string name="signup_surnameField_title">Name</string>
    <string name="signup_loginField_title">Enter your Airbus User ID</string>
    <string name="signup_passwordField_title">Choose a password</string>
    <string name="signup_passwordConfirmationField_title">Confirm your password :</string>
    <string name="signup_firstNameField_title">Enter your first name :</string>
    <string name="signup_businessUnits_default">Pick a Business Unit</string>
    <string name="signup_commodities_default">Pick a Commodity</string>
    <string name="signup_roles_default">Pick a Role</string>
    <string name="signup_buttonNext">Next</string>
    <string name="signup_buttonConfirm">Confirm</string>
    <string name="signup_screen_3_titleColumn1">Select suppliers you are working with :</string>
    <string name="signup_screen_3_titleColumn3">Tick only if you plan a negotiation</string>
    <string name="signup_screen_4_titleColumn1">Select products you are working on :</string>
    <string name="signup_screen_4_titleColumn3">Tick only if you plan a CFT</string>

    <string name="mainMenu_screen_title">Main Menu</string>
    <string name="mainMenu_welcome_title">Welcome, [insert name] !</string>
    <string name="mainMenu_buttons_title">What are you looking for today ?</string>
    <string name="mainMenu_buttonSearchByMember_title">A person</string>
    <string name="mainMenu_buttonSearchByProduct_title">A Product</string>
    <string name="mainMenu_buttonSearchBySupplier_title">A supplier</string>
    <string name="mainMenu_buttonEditProfile_title">Edit my profile</string>

    <string name="searchByMember_screen_title">I am looking for a person</string>
    <string name="searchByMember_nameField_title">First Name</string>
    <string name="searchByMember_surnameField_title">Name</string>
    <string name="searchByMember_BUField_title">Business Unit</string>
    <string name="searchByMember_button_title">GO</string>
    <string name="searchByMember_title">Searching by member</string>

    <string name="searchBySupplier_button_title">GO</string>
    <string name="searchBySupplier_nameField_title">Supplier</string>
    <string name="searchBySupplier_screen_title">I am looking for a supplier</string>
    <string name="searchBySupplier_title">Searching by supplier</string>

    <string name="searchByProduct_button_title">GO</string>
    <string name="searchByProduct_nameField_title">Product</string>
    <string name="searchByProduct_screen_title">I am looking for a product</string>
    <string name="searchByProduct_title">Searching by product</string>

    <string name="supplier_screenTitle">Supplier Details</string>
    <string name="supplier_screen_title">[insert supplier name]</string>
    <string name="supplier_productsgrid_title">Products :</string>
    <string name="supplier_membersgrid_title">People :</string>
    <string name="supplier_membersgrid_titleColumn1">Relationship :</string>
    <string name="supplier_membersgrid_titleColumn3">Neg. planned :</string>

    <string name="member_screenTitle">Member Details</string>
    <string name="member_screen_title">[insert member name]</string>
    <string name="member_details_title">[insert member details]</string>
    <string name="member_suppliersgrid_title">Suppliers :</string>
    <string name="member_suppliersgrid_titleColumn1">Relationship :</string>
    <string name="member_suppliersgrid_titleColumn3">Neg. planned :</string>
    <string name="member_productsgrid_title">Products :</string>
    <string name="member_productsgrid_titleColumn1">Working on :</string>
    <string name="member_productsgrid_titleColumn3">CFT planned :</string>

    <string name="product_screenTitle">Product Details</string>
    <string name="product_screen_title">[insert product name]</string>
    <string name="product_suppliersgrid_title">Suppliers :</string>
    <string name="product_membersgrid_title">People :</string>
    <string name="product_membersgrid_titleColumn1">Working on this :</string>
    <string name="product_membersgrid_titleColumn3">CFT planned :</string>

    <string name="editprofile_screen_title">Profile Editor</string>
    <string name="editprofile_screen_title_button">edit</string>
    <string name="editprofile_BU_title_button">edit</string>
    <string name="editprofile_Commodity_title_button">edit</string>
    <string name="editprofile_productsgrid_title_button">edit</string>
    <string name="editprofile_suppliersgrid_title_button">edit</string>

    <string name="researchResults_screenTitle">Research results</string>
    <string name="researchResults_noResultsFound">No matching results found</string>

    <string name="rowItem_defaultText">[Insert element here]</string>
    <string name="rowItem_NoProdFound">No products found for this Supplier</string>

</resources>
