<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vandenbussche.airbussources.activity.MainMenu">

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="65dp"
        android:fontFamily="sans-serif"
        android:text="@string/mainMenu_welcome_title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/buttonsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="63dp"
        android:text="@string/mainMenu_buttons_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitle"
        app:layout_constraintHorizontal_bias="0.503" />

    <Button
        android:id="@+id/buttonSearchByMember"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/mainMenu_buttonSearchByMember_title"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSearchByProduct" />

    <Button
        android:id="@+id/buttonSearchByProduct"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/mainMenu_buttonSearchByProduct_title"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSearchBySupplier" />

    <Button
        android:id="@+id/buttonSearchBySupplier"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/mainMenu_buttonSearchBySupplier_title"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="36dp" />

    <Button
        android:id="@+id/buttonEditProfile"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/mainMenu_buttonEditProfile_title"
        android:textAlignment="center"
        android:textSize="10sp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>