<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/editMemberScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/member_screen_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.134" />
    <Button
        android:id="@+id/buttonEditMemberName"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="91dp"
        android:layout_height="17dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/editprofile_screen_title_button"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/editMemberDetailsBU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member_details_title"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editMemberScreenTitle"
        app:layout_constraintHorizontal_bias="0.138" />
    <Button
        android:id="@+id/buttonEditMemberBU"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="91dp"
        android:layout_height="17dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/editprofile_BU_title_button"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/buttonEditMemberName"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/editMemberDetailsCommodity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member_details_title"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editMemberDetailsBU"
        app:layout_constraintHorizontal_bias="0.138" />
    <Button
        android:id="@+id/buttonEditMemberCommodity"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="91dp"
        android:layout_height="17dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/editprofile_Commodity_title_button"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/buttonEditMemberBU"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/editMemberProductsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member_productsgrid_title"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/editMemberProductsListView"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    <Button
        android:id="@+id/buttonEditProducts"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="91dp"
        android:layout_height="17dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="20dp"
        android:text="@string/editprofile_productsgrid_title_button"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/editMemberProductsListView" />

    <ListView
        android:id="@+id/editMemberProductsListView"
        android:layout_width="306dp"
        android:layout_height="150dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/editMemberSuppliersTitle" />


    <TextView
        android:id="@+id/editMemberSuppliersTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member_suppliersgrid_title"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/editMemberSuppliersListView" />
    <Button
        android:id="@+id/buttonEditSuppliers"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="91dp"
        android:layout_height="17dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="20dp"
        android:text="@string/editprofile_suppliersgrid_title_button"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/editMemberSuppliersListView" />

    <ListView
        android:id="@+id/editMemberSuppliersListView"
        android:layout_width="306dp"
        android:layout_height="150dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25dp" />



</android.support.constraint.ConstraintLayout>